[bug/style] dont expand menu on mobile scroll / wider container

--- a/style.css
+++ b/style.css
@@ -17,16 +17,16 @@
     --white: #ffffff;
     --black: #000000;
     --transparent-color: #00000000;
-    --menu-gradient: linear-gradient(0deg,rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 40%, rgba(0, 0, 0, 0.5) 100%);
+    --menu-gradient: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 40%, rgba(0, 0, 0, 0.5) 100%);
 
     /* fonts */
     --font-family: 'Poppins', sans-serif;
 
     /* dimensions */
-    --container-width: 960px;
+    --container-max-width: 90%;
     --menu-height: 110px;
     --menu-height-scrolled: 80px;
-    --menu-height-mobile: 60px;
+    --menu-height-mobile: 70px;
 
     /* shadows */
     --logo-shadow: 0 4px 8px rgba(0, 0, 0, 0.22);
@@ -98,7 +98,7 @@ header.scrolled
 
 .nav-container
 {
-    max-width: var(--container-width);
+    max-width: var(--container-max-width);
     height: 100%;
     margin: 0 auto;
     padding: 0 1rem;
@@ -206,7 +206,7 @@ header.scrolled
 
 .container
 {
-    max-width: var(--container-width);
+    max-width: var(--container-max-width);
     margin: 0 auto;
 }
 
@@ -386,6 +386,11 @@ footer
     }
 
     header
+    {
+        height: var(--menu-height-mobile);
+    }
+
+    header.scrolled
     {
         height: var(--menu-height-mobile);
     }
